docs/v1.3.0/en/api/campaign/AllianceCampaignBehavior.md
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `AllianceCampaignBehavior`
- [← Area / Back to campaign](./)
- [↑ API Index](../)
- [🏠 Home v1.3.0](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# AllianceCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class AllianceCampaignBehavior : CampaignBehaviorBase, IAllianceCampaignBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `TaleWorlds.CampaignSystem/CampaignBehaviors/AllianceCampaignBehavior.cs`

## Overview

`AllianceCampaignBehavior` lives in `TaleWorlds.CampaignSystem.CampaignBehaviors` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.CampaignSystem.CampaignBehaviors` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Methods

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** Handles logic related to `register events`.

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** Handles logic related to `sync data`.

### OnCallToWarAgreementProposedByPlayerKingdom
`public void OnCallToWarAgreementProposedByPlayerKingdom(Kingdom proposedKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** Called when the `call to war agreement proposed by player kingdom` event is raised.

### IsAllyWithKingdom
`public bool IsAllyWithKingdom(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** Handles logic related to `is ally with kingdom`.

### StartAlliance
`public void StartAlliance(Kingdom proposerKingdom, Kingdom receiverKingdom)`

**Purpose:** Handles logic related to `start alliance`.

### EndAlliance
`public void EndAlliance(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** Handles logic related to `end alliance`.

### HasCalledToWar
`public bool HasCalledToWar(Kingdom callingKingdom, Kingdom calledKingdom)`

**Purpose:** Checks whether the current object has/contains `called to war`.

### IsAtWarByCallToWarAgreement
`public bool IsAtWarByCallToWarAgreement(Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** Handles logic related to `is at war by call to war agreement`.

### StartCallToWarAgreement
`public void StartCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst, int callToWarCost, bool isPlayerPaying = false)`

**Purpose:** Handles logic related to `start call to war agreement`.

### EndCallToWarAgreement
`public void EndCallToWarAgreement(Kingdom callingKingdom, Kingdom calledKingdom, Kingdom kingdomToCallToWarAgainst)`

**Purpose:** Handles logic related to `end call to war agreement`.

### GetKingdomsToCallToWarAgainst
`public List<Kingdom> GetKingdomsToCallToWarAgainst(Kingdom callingKingdom, Kingdom calledKingdom)`

**Purpose:** Gets the current value of `kingdoms to call to war against`.

### AutoGeneratedStaticCollectObjectsAlliance
`public static void AutoGeneratedStaticCollectObjectsAlliance(object o, List<object> collectedObjects)`

**Purpose:** Handles logic related to `auto generated static collect objects alliance`.

### AutoGeneratedStaticCollectObjectsCallToWarAgreement
`public static void AutoGeneratedStaticCollectObjectsCallToWarAgreement(object o, List<object> collectedObjects)`

**Purpose:** Handles logic related to `auto generated static collect objects call to war agreement`.

## Usage Example

```csharp
var value = new AllianceCampaignBehavior();
value.RegisterEvents();
```

## See Also

- [Complete Class Catalog](../catalog)